...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Home" image="home" selectedImage="home" id="fDt-0J-E4B"/>
                    <connections>
                        <outlet property="photosTableV" destination="eeN-60-CfF" id="9pv-Pt-7td"/>
...
                                                                </constraints>
                                                            </imageView>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="E_mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="chI-fb-WYA">
                                                                <rect key="frame" x="50" y="0.0" width="200" height="64"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="E_mail"/>
...
                                                                </constraints>
                                                            </imageView>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PCz-Ib-gmU">
                                                                <rect key="frame" x="50" y="0.0" width="200" height="64"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="Password"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" name="DINCondensed-Bold" family="DIN Condensed" pointSize="31"/>
                                                <state key="normal" title="Login">
                                                    <color key="titleColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                                <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zCF-g8-Byg">
                                        <rect key="frame" x="20" y="37" width="56.5" height="28"/>
                                        <fontDescription key="fontDescription" name="DINCondensed-Bold" family="DIN Condensed" pointSize="28"/>
...
                                            <constraint firstAttribute="height" constant="35" id="CJo-2o-UM1"/>
                                        </constraints>
                                        <state key="normal" image="logout"/>
                                        <connections>
                                            <action selector="logoutBtnPressed:" destination="0vY-A9-Wcv" eventType="touchUpInside" id="td7-rv-fls"/>
...
                                </constraints>
                                <color key="tintColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" image="cameraIcone"/>
                                <connections>
                                    <action selector="cameraBtnPressed:" destination="0vY-A9-Wcv" eventType="touchUpInside" id="EMD-u9-rwy"/>
...
