...
//        CAMERA = NSLocalizedString("camera", comment: "")
//        GALLERY = NSLocalizedString("gallery", comment: "")
//        CANCEL_ACTION_SHEET = NSLocalizedString("cancelActionSheet", comment: "")

        let actionSheet = UIAlertController(title: nil, message: nil, preferredStyle: .actionSheet)
        
        actionSheet.addAction(UIAlertAction(title: "CAMERA", style: .default, handler: { (alert:UIAlertAction!) -> Void in
            self.camera()
        }))
        
        actionSheet.addAction(UIAlertAction(title: "GALLERY", style: .default, handler: { (alert:UIAlertAction!) -> Void in
            self.photoLibrary()
        }))
       
        actionSheet.addAction(UIAlertAction(title: "CANCEL", style: .cancel, handler: nil))
        actionSheet.view.tintColor =  UIColor(named: "AppMainColor") != nil ? UIColor(named: "AppMainColor")! : #colorLiteral(red: 0, green: 0, blue: 0, alpha: 1)
        actionSheet.popoverPresentationController?.sourceView = vc.view
        actionSheet.popoverPresentationController?.sourceRect = CGRect(x: vc.view.bounds.midX, y: (vc.view.frame.height)-100, width: 0, height: 0)
        actionSheet.popoverPresentationController?.permittedArrowDirections = []


...
