...
        if #available(iOS 13.0, *) {
                         initVM()
                     }
              else {
                         // Fallback on earlier versions
                     }
        view.accessibilityIdentifier = "view_Homeboard"

        configrationTableView()
    }
    
    func configrationTableView(){
        photosTableV.separatorStyle = .none
...
