...
    @IBOutlet weak var progress: UIActivityIndicatorView!
    
    @IBOutlet weak var nameTF: UILabel!
    override func viewDidLoad() {
        super.viewDidLoad()

        view.accessibilityIdentifier = "view_Profileboard"
        if #available(iOS 13.0, *) {
                   initVM()
               }
        else {
                   // Fallback on earlier versions
               }
...
